# sqlk

./: Cargo.toml  LICENSE  Makefile  README.md  config.toml  create-brew-sqlk.sh  schema.sql
sqlk/: Cargo.toml  README.md
sqlk/src/: lib.rs  main.rs
sqlk/src/application/: mod.rs
sqlk/src/application/app/: mod.rs
sqlk/src/application/clipboard/: mod.rs
sqlk/src/application/events/: mod.rs
sqlk/src/application/file_operations/: mod.rs
sqlk/src/application/input/: mod.rs
sqlk/src/application/modes/: mod.rs
sqlk/src/application/query_execution/: mod.rs
sqlk/src/application/state/: mod.rs
sqlk/src/args/: mod.rs
sqlk/src/config/: mod.rs
sqlk/src/config/db/: mod.rs
sqlk/src/config/fk/: mod.rs
sqlk/src/config/loader/: mod.rs
sqlk/src/config/matrix/: mod.rs
sqlk/src/config/parser/: mod.rs
sqlk/src/database/: mod.rs
sqlk/src/database/fk/: mod.rs
sqlk/src/database/manager/: mod.rs
sqlk/src/database/postgres/: client.rs  formatting.rs  mod.rs
sqlk/src/database/query_result/: mod.rs
sqlk/src/matrix/: mod.rs
sqlk/src/matrix/animation/: mod.rs
sqlk/src/matrix/character/: mod.rs
sqlk/src/matrix/colours/: mod.rs
sqlk/src/matrix/column/: mod.rs
sqlk/src/matrix/config/: mod.rs
sqlk/src/matrix/text_overlay/: mod.rs
sqlk/src/query_parser/: mod.rs
sqlk/src/query_parser/analyzer/: mod.rs
sqlk/src/query_parser/block/: mod.rs
sqlk/src/query_parser/parser/: mod.rs
sqlk/src/query_parser/safety/: mod.rs
sqlk/src/query_parser/utils/: mod.rs
sqlk/src/table_viewer/: mod.rs
sqlk/src/table_viewer/data/: mod.rs
sqlk/src/ui/: mod.rs
(+26 files in other folders)
