
[package]
name = "sqlk"      
version = "0.1.1"   
authors = ["Seth <seth@planetbun.com>"] 
edition = "2024"        
description = "A terminal-based PostgreSQL query execution and visualization tool with vim-like navigation." 
license = "MIT OR Apache-2.0" 
repository = "https://github.com/sethrollinsbah/sqlk" # URL of source repo
# homepage = "https://yourprojecthomepage.com"      # Optional project homepage URL
# documentation = "https://docs.rs/sqlk"            # Optional docs URL
readme = "README.md"    
keywords = ["sql", "cli", "database"]
categories = ["command-line-utilities", "PostgreSQL", "tui"] 


[lib]
name = "sqlk"
path = "src/lib.rs"

[[bin]]
name = "sqlk"
path = "src/main.rs"

[dependencies]
# TUI and terminal handling
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["any", "runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono","uuid", "json"] }

# Configuration and parsing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# File and environment handling
dotenv = "0.15"
dirs = "5.0"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
unicode-width = "0.1"

# Async utilities
futures = "0.3"
async-trait = "0.1"
rand = "0.9.2"
chrono = "0.4.41"
serde_json = "1.0.143"
uuid = "1.18.0"
cli-clipboard = "0.4.0"

[dev-dependencies]
tempfile = "3.8"
